objects/Manuals__c.object
<CustomObject>
    <description>Stores manuals modified in last one week.</description>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>file__c</fullName>
        <label>file</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>modified_date__c</fullName>
        <description>Modified date of products</description>
        <label>modified_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>product__c</fullName>
        <label>product</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>title__c</fullName>
        <label>title</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Manual</label>
    <nameField>
        <label>Manuals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>